# ai-engineer-classwork

./: README.md
1_intro/: testing.md
2_customize_model/3_skills/rest/: response.md  script.py
2_customize_model/3_skills/snake/: pyproject.toml  response.md  script.py
3_data/: openai_format.py  pyproject.toml  sample_tweets.csv  tweet_download.py  tweet_download_sample.py  tweet_transform.py
3_data/data/: input_output.txt
4_customization/: main.py  pyproject.toml
4_customization/data/: all.jsonl
6_RAG/: call_openai.py  main.py  prepare_data.py  pyproject.toml  search.py
6_RAG/data/: input_output.txt
7_RAG-2/: pyproject.toml  script-save-to-disk.py  script.py
