[tool.poetry]
name = "3-data"
version = "0.1.0"
description = ""
authors = ["Michal Ustanik <michal.ustanik@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
feedparser = "^6.0.11"
tweepy = "^4.14.0"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
